# quant-proj

./: .gitignore  AGENTS.md  CLAUDE.md  QUANT_WORKSPACE_CODEX_REASONIX_PLAN.md  README.md  pyproject.toml  requirements-ci.in
.codex/: config.toml
ci/: pytest-skip-allowlist.json
config/: settings.toml
docs/: architecture.md  development_first_research_policy_20260708.md  external_audit_codex_remediation_20260723.md  external_audit_current.md  external_audit_exhaustive_remediation_ledger_20260724.json  external_audit_remediation_ledger_20260723.md  external_audit_round3_62300cdf_20260723.md  external_audit_round3_ledger_62300cdf_20260723.json  external_audit_round3_remediation_ledger_20260723.json  external_audit_round4_d46a993_20260723.md  external_audit_round4_ledger_d46a993_20260723.json  external_audit_round4_remediation_ledger_20260723.json  external_audit_round5_81403aa_20260724.md  external_audit_round5_ledger_81403aa_20260724.json  external_audit_round5_remediation_ledger_20260724.json  external_audit_round6_938aada_20260724.md  external_audit_round6_independent_938aada_20260724.md  external_audit_round6_independent_ledger_938aada_20260724.json  external_audit_round6_independent_remediation_ledger_20260724.json  external_audit_round6_ledger_938aada_20260724.json  external_audit_round7_independent_3f4b46bb_20260724.md  external_audit_round7_independent_ledger_3f4b46bb_20260724.json  external_audit_round7_reproductions_3f4b46bb_20260724.txt  external_review_20260715.md  external_review_checkpoint_after_p4r_20260715.md  (+1 more)
prompts/: reasonix_advisory_review.md  (+3 more)
(+1859 files in other folders)
