[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-proj"
version = "2.0.0"
description = "A lightweight personal quantitative research workspace"
requires-python = ">=3.12"
dependencies = ["duckdb==1.5.4"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.9"]

[project.scripts]
quant = "quant_system.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
