[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-proj"
version = "2.0.0"
description = "A lightweight personal quantitative research workspace"
requires-python = ">=3.12"
dependencies = ["duckdb==1.5.4", "pytz==2026.2"]

[project.optional-dependencies]
dev = ["numpy==2.4.6", "pytest==9.1.1", "ruff==0.15.21"]

[project.scripts]
quant = "quant_system.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
